# uddf-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  knope.toml
.changeset/: first_release.md  update_manifest.md
.github/workflows/: prepare_release.yml  release.yml  rust.yml
assets/garmin/: 16961399118_ACTIVITY.fit  16961399118_ACTIVITY.xml
examples/: garmin.rs
src/: lib.rs
src/converter/: constants.rs  mod.rs
src/converter/garmin/: constants.rs  import.rs
src/entities/contact/: structure.rs
src/entities/dive/: builder.rs  structure.rs
src/entities/dive_base/: builder.rs
src/entities/dive_computer/: structure.rs
src/entities/dive_site/: builder.rs
src/entities/diver/: builder.rs
src/entities/equipment/: builder.rs
src/entities/gas_definitions/: builder.rs  structure.rs
src/entities/geography/: structure.rs
src/entities/information_after_dive/: builder.rs  structure.rs
src/entities/information_before_dive/: structure.rs
src/entities/last_name/: builder.rs  structure.rs
src/entities/light/: builder.rs
src/entities/link/: builder.rs  structure.rs
src/entities/maker/: builder.rs  structure.rs
src/entities/manufacturer/: structure.rs
src/entities/mix/: builder.rs
src/entities/owner/: structure.rs
src/entities/personal/: builder.rs  structure.rs
src/entities/profile_data/: builder.rs  structure.rs
src/entities/samples/: builder.rs
src/entities/site/: builder.rs  structure.rs
src/entities/tank_data/: structure.rs
src/entities/tank_pressure/: structure.rs
src/entities/uddf/: builder.rs
src/utils/: math.rs  mod.rs
