[package]
name = "uddf-sdk"
version = "0.2.0"
edition = "2021"
description = "Reading and writing UDDF files"
license = "GPL-3.0"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
fitparser = "0.7.0"
quick-xml = { version = "0.36.1", features = ["serde", "serialize"] }
serde = { version = "1.0.210", features = ["derive"] }
