[package]
name = "uddf-sdk"
version = "0.2.0"
edition = "2021"
description = "Reading and writing UDDF files"
license = "GPL-3.0"
authors = ["Damien CORLER <31737627+d-corler@users.noreply.github.com>"]
repository = "https://github.com/d-corler/uddf-sdk"
homepage = "https://github.com/d-corler/uddf-sdk"
keywords = ["uddf", "scuba", "diving", "logbook", "garmin"]
categories = ["parsing", "serialization"]

[dependencies]
chrono = { version = "0.4.38", default-features = false }
fitparser = "0.7.0"
quick-xml = { version = "0.36.1", features = ["serde", "serialize"] }
serde = { version = "1.0.210", features = ["derive"] }
